<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_5">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_5"
        android:text="@string/snack_name" />

    <EditText
        android:id="@+id/new_snack_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5"
        tools:text="Carrot" />

    <ToggleButton
        android:id="@+id/veggie_non_veggie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="@dimen/padding_10"
        android:textColor="@color/dark_green"
        android:textOff="@string/non_veggie"
        android:textOn="@string/veggie" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_snack_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_5"
            android:text="@string/save" />

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_5"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>